sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:2: error: identifier expected but 'var' found.
def bubbleSort(var tab)  {
               ^AlgBubbleSort1:19: error: ':' expected but '}' found.
}
^