sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort(var tab)  {
  var tab_has_changed = false;
  var tmp_value;
  do{
  	for(int i = 0; i < tab.length - 2; i++){
    	if(tab[i+1] > tab[i]){
        tmp_value = tab[i+1];
        tab[i+1] = tab[i];
        tab[i] = tmp_value;
        tab_has_changed = true;
      }
  	}
  }while(tab_has_changed);
  
}